--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Vite App</title>
+  <script type="module" crossorigin src="assets/index.5b35bebd.js"></script>
+  <link rel="stylesheet" href="assets/index.4c194c88.css">
 </head>
 <body>
 <div id="app"></div>
-<script type="module" src="/src/main.js"></script>
+
 </body>
 </html>
