--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Vite App</title>
+    <title>Batocera! Game List</title>
   <script type="module" crossorigin src="assets/index.5b35bebd.js"></script>
   <link rel="stylesheet" href="assets/index.4c194c88.css">
 </head>
