--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Batocera! Game List</title>
-  <script type="module" crossorigin src="assets/index.2fe4395b.js"></script>
-  <link rel="stylesheet" href="assets/index.c03ee112.css">
+  <script type="module" crossorigin src="/assets/index.4fc03ee2.js"></script>
+  <link rel="stylesheet" href="/assets/index.0630932d.css">
 </head>
 <body>
 <div id="app"></div>
