change default font size

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Batocera! Game List</title>
   <script type="module" crossorigin src="assets/index.770d3d16.js"></script>
   <link rel="stylesheet" href="assets/index.d96702d1.css">
+  <style>
+      html {
+          font-size: 12px;
+      }
+  </style>
 </head>
 <body>
 <div id="app"></div>
